Update and rename Index.htm to index.htm

--- a/index.htm
+++ b/index.htm
@@ -787,7 +787,7 @@ line-height:107%;font-family:Aharoni;mso-ansi-language:EN-US'><o:p></o:p></span>
 
 <p class=MsoNormal align=center style='margin-bottom:0cm;text-align:center'><b><i><span
 lang=EN-US style='font-size:18.0pt;line-height:107%;color:#1F3864;mso-themecolor:
-accent1;mso-themeshade:128;mso-ansi-language:EN-US'>Securing Your Home –
+accent1;mso-themeshade:128;mso-ansi-language:EN-US'>Securing Your Home Â–
 Protecting Our Planet<o:p></o:p></span></i></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0cm;text-align:center'><b><i><span
@@ -800,7 +800,7 @@ EN-US'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
 style='font-size:16.0pt;line-height:107%;mso-ansi-language:EN-US'>Installers of
-high security and energy rated Windows, Doors and Living Spaces – throughout South
+high security and energy rated Windows, Doors and Living Spaces Â– throughout South
 Wales, with over 20 years experience!<o:p></o:p></span></b></p>
 
 <p class=MsoNormal><b><span lang=EN-US style='font-size:16.0pt;line-height:
