Update and rename Index.htm to index.htm

--- a/index.htm
+++ b/index.htm
@@ -818,7 +818,7 @@ High Security and Energy Rated Windows, Doors, and Living Spaces<o:p></o:p></spa
 
 <p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
 style='font-size:16.0pt;line-height:107%;mso-ansi-language:EN-US'>Throughout South
-Wales, with over 20 years’ experience!<o:p></o:p></span></b></p>
+Wales, with over 20 yearsÂ’ experience!<o:p></o:p></span></b></p>
 
 <p class=MsoNormal><b><span lang=EN-US style='font-size:16.0pt;line-height:
 107%;mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></b></p>
