Update and rename index1.htm to index.htm

--- a/index.htm
+++ b/index.htm
@@ -831,7 +831,7 @@ High Security and Energy Rated Windows, Doors, and Living Spaces<o:p></o:p></spa
 
 <p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
 style='font-size:16.0pt;line-height:106%;mso-ansi-language:EN-US'>Located
-Throughout South Wales, With Over 20 Years’ Experience!<o:p></o:p></span></b></p>
+Throughout South Wales, With Over 20 YearsÂ’ Experience!<o:p></o:p></span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
 style='font-size:16.0pt;line-height:106%;mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></b></p>
