--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -265,7 +265,7 @@
             <div class="u-layout-row" style="">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-white u-layout-cell-1" src="">
                 <div class="u-container-layout u-container-layout-1">
-                  <img class="u-image u-image-contain u-image-default u-image-1" src="images/5star.jpg" alt="" data-image-width="960" data-image-height="240">
+                  <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/5star.jpg" alt="" data-image-width="960" data-image-height="240">
                   <h2 class="u-text u-text-1">Testimonials<br>
                   </h2>
                   <p class="u-text u-text-2">
