--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -243,7 +243,7 @@
                   <p class="u-text u-text-3">
                     <br>Our goal is simple - Deliver a fantastic experience, to all customers, always!<br>
                     <br>With over 20 years experience in the fenestration industry, we have put together an exciting portfolio&nbsp;of products to suit all budgets, without compromising on security, style or energy conservation.&nbsp;<br>
-                    <br>All our installations will be FENSA approved and include an Insurance Backed Guarantee.&nbsp;<br>
+                    <br>All our installations are FENSA approved and include an Insurance Backed Guarantee.&nbsp;<br>
                     <br>
                   </p>
                   <div class="custom-expanded u-border-20 u-border-custom-color-1 u-border-no-bottom u-border-no-right u-border-no-top u-container-style u-grey-5 u-group u-group-1">
@@ -278,8 +278,55 @@
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2" src="">
-                <div class="u-container-layout u-valign-middle u-container-layout-2" src="">
-                  <img class="custom-expanded u-image u-image-2" src="images/VS.jpg" data-image-width="1200" data-image-height="1600">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-2" src="">
+                  <div class="u-carousel u-expanded-width u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-a1f1">
+                    <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
+                      <li data-u-target="#carousel-a1f1" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+                      <li data-u-target="#carousel-a1f1" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+                    </ol>
+                    <div class="u-carousel-inner u-gallery-inner" role="listbox">
+                      <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
+                        <div class="u-back-slide" data-image-width="779" data-image-height="934">
+                          <img class="u-back-image u-expanded" src="images/Before.png">
+                        </div>
+                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-1">
+                          <h3 class="u-gallery-heading">Before</h3>
+                        </div>
+                      </div>
+                      <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-2">
+                        <div class="u-back-slide" data-image-width="756" data-image-height="921">
+                          <img class="u-back-image u-expanded" src="images/After.png">
+                        </div>
+                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
+                          <h3 class="u-gallery-heading">After</h3>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-a1f1" role="button" data-u-slide="prev">
+                      <span aria-hidden="true">
+                        <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
+c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
+c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
+                      </span>
+                      <span class="sr-only">
+                        <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
+c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
+c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
+                      </span>
+                    </a>
+                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-a1f1" role="button" data-u-slide="next">
+                      <span aria-hidden="true">
+                        <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
+                      </span>
+                      <span class="sr-only">
+                        <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
+                      </span>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
