--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-container-align-center u-header u-header" id="sec-41f8"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-border-2 u-border-grey-75 u-clearfix u-container-align-center u-header u-header" id="sec-41f8"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 400;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
@@ -142,13 +142,15 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-image u-shading u-section-1" id="sec-2c09" data-image-width="1280" data-image-height="853">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-align-center u-text u-text-default u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
           <span class="u-text-white">EcoShield Windo​ws</span>
           <br>
-          <br>
-          <span class="u-text-white">Site Under Construction</span>
         </h1>
+        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" alt="" data-image-width="1000" data-image-height="1000" src="images/rvdgen2_vb_2000x2000.webp" data-animation-name="customAnimationIn" data-animation-duration="1000">
+        <h6 class="u-align-center u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">FREE Ring Doorbell*<br>
+          <br>With Every Composite Door purchased in January and February 2024<br>Quote ref - WEF01
+        </h6>
       </div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-c204">
@@ -156,15 +158,15 @@
         <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-style u-custom-color-1 u-layout-cell u-size-48-lg u-size-48-xl u-size-59-md u-size-59-sm u-size-59-xs u-layout-cell-1">
-                <div class="u-container-layout u-valign-bottom-lg u-container-layout-1">
+              <div class="u-container-style u-custom-color-1 u-layout-cell u-size-48 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
                   <h3 class="u-align-center u-text u-text-white u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000">Installers of High Security and Energy Efficient Windows, Doors &amp; Living Spaces&nbsp;<br>South Wales
                   </h3><span class="u-icon u-text-white u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 54.757 54.757" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5803"></use></svg><svg class="u-svg-content" viewBox="0 0 54.757 54.757" x="0px" y="0px" id="svg-5803" style="enable-background:new 0 0 54.757 54.757;"><path d="M40.94,5.617C37.318,1.995,32.502,0,27.38,0c-5.123,0-9.938,1.995-13.56,5.617c-6.703,6.702-7.536,19.312-1.804,26.952
 	L27.38,54.757L42.721,32.6C48.476,24.929,47.643,12.319,40.94,5.617z M27.557,26c-3.859,0-7-3.141-7-7s3.141-7,7-7s7,3.141,7,7
 	S31.416,26,27.557,26z"></path></svg></span>
                 </div>
               </div>
-              <div class="u-container-style u-custom-color-1 u-layout-cell u-size-1-md u-size-1-sm u-size-1-xs u-size-12-lg u-size-12-xl u-layout-cell-2">
+              <div class="u-container-style u-custom-color-1 u-layout-cell u-size-12 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <a href="mailto:info@ecoshieldwindows.co.uk?subject=FREE%20QUOTATION" class="u-align-center u-black u-border-none u-btn u-button-style u-hover-palette-1-dark-1 u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="2000">get a free quote&nbsp;</a>
                 </div>
@@ -181,23 +183,23 @@
             <div class="u-layout-col">
               <div class="u-size-30">
                 <div class="u-layout-row">
-                  <div class="u-container-style u-layout-cell u-left-cell u-size-15 u-size-30-md u-layout-cell-1" src="">
+                  <div class="u-container-style u-layout-cell u-left-cell u-size-15 u-layout-cell-1" src="">
                     <div class="u-container-layout u-valign-middle u-container-layout-1">
                       <img class="custom-expanded u-image u-image-1" src="images/CasementWindow.jpg" data-image-width="810" data-image-height="1126">
                     </div>
                   </div>
-                  <div class="u-align-left u-container-style u-layout-cell u-size-15 u-size-30-md u-white u-layout-cell-2">
+                  <div class="u-align-left u-container-style u-layout-cell u-size-15 u-white u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
                       <h3 class="u-text u-text-1"> Casement Windows</h3>
                       <p class="u-text u-text-2"> Designed to achieve a wide range of configurations to suit any property type.&nbsp;</p>
                     </div>
                   </div>
-                  <div class="u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3" src="">
-                    <div class="u-container-layout u-valign-middle-xs u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-3">
+                  <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-3" src="">
+                    <div class="u-container-layout u-valign-top u-container-layout-3">
                       <img class="custom-expanded u-image u-image-2" src="images/verticalsliderimage2.png" data-image-width="364" data-image-height="618">
                     </div>
                   </div>
-                  <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-15 u-size-30-md u-white u-layout-cell-4">
+                  <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-15 u-white u-layout-cell-4">
                     <div class="u-container-layout u-valign-middle u-container-layout-4">
                       <h3 class="u-text u-text-3"> Vertical Sliders</h3>
                       <p class="u-text u-text-4"> The sliding sash window combines&nbsp;the elegance of traditional sash windows with the benefits of modern materials.</p>
@@ -207,22 +209,22 @@
               </div>
               <div class="u-size-30">
                 <div class="u-layout-row">
-                  <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-15 u-size-30-md u-white u-layout-cell-5">
+                  <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-15 u-white u-layout-cell-5">
                     <div class="u-container-layout u-valign-middle u-container-layout-5">
                       <h3 class="u-text u-text-5"> Flush Casement</h3>
                       <p class="u-text u-text-6"> Flush casement&nbsp;brings elegance and quality into every home&nbsp;with a range of colours and options to suit your needs.</p>
                     </div>
                   </div>
-                  <div class="u-container-style u-image u-layout-cell u-size-15 u-size-30-md u-image-3" src="" data-image-width="1200" data-image-height="1200">
+                  <div class="u-container-style u-image u-layout-cell u-size-15 u-image-3" src="" data-image-width="1200" data-image-height="1200">
                     <div class="u-container-layout u-valign-middle u-container-layout-6"></div>
                   </div>
-                  <div class="u-align-left u-container-style u-layout-cell u-size-15 u-size-30-md u-white u-layout-cell-7">
+                  <div class="u-align-left u-container-style u-layout-cell u-size-15 u-white u-layout-cell-7">
                     <div class="u-container-layout u-valign-middle u-container-layout-7">
                       <h3 class="u-text u-text-7">Composite Doors</h3>
                       <p class="u-text u-text-8"> Combining modern materials and performance with traditional looks, enhance the character of your home with a composite door.</p>
                     </div>
                   </div>
-                  <div class="u-container-style u-layout-cell u-right-cell u-size-15 u-size-30-md u-layout-cell-8" src="">
+                  <div class="u-container-style u-layout-cell u-right-cell u-size-15 u-layout-cell-8" src="">
                     <div class="u-container-layout u-valign-middle u-container-layout-8">
                       <img class="custom-expanded u-image u-image-4" src="images/compositedoors2.png" data-image-width="664" data-image-height="488">
                     </div>
@@ -372,10 +374,10 @@
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2" src="">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src="">
-                  <div class="u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-always u-gallery-1" id="carousel-1f09" data-interval="3000" data-u-ride="carousel">
+                  <div class="u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-always u-gallery-1" id="carousel-a094" data-interval="3000" data-u-ride="carousel">
                     <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-                      <li data-u-target="#carousel-1f09" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-1f09" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+                      <li data-u-target="#carousel-a094" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+                      <li data-u-target="#carousel-a094" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
                     </ol>
                     <div class="u-carousel-inner u-gallery-inner" role="listbox">
                       <div class="u-active u-carousel-item u-effect-hover-zoom u-gallery-item u-carousel-item-1">
@@ -395,7 +397,7 @@
                         </div>
                       </div>
                     </div>
-                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-1f09" role="button" data-u-slide="prev">
+                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-a094" role="button" data-u-slide="prev">
                       <span aria-hidden="true">
                         <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
 c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
@@ -407,7 +409,7 @@ c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.3
 c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
                       </span>
                     </a>
-                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-1f09" role="button" data-u-slide="next">
+                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-a094" role="button" data-u-slide="next">
                       <span aria-hidden="true">
                         <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
@@ -452,6 +454,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </a>
         </div>
         <div class="u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div>
+        <p class="u-text u-text-default u-text-1">*Free Ring Doorbell Promotion (January - Feburary 2024) - We reserver the right to remove the promotion at any point. Doorbell instulation not included. For doorbell installation fees, please speak to a member of our team.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-design" target="_blank">
