--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div></header>
     <section class="u-clearfix u-image u-shading u-section-1" id="sec-2c09" data-image-width="1280" data-image-height="853">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
+        <h1 class="u-align-center u-text u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
           <span class="u-text-white">EcoShield Windo​ws</span>
           <br>
         </h1>
@@ -154,13 +154,16 @@
       </div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-c204">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-bottom-xs u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-custom-color-1 u-layout-cell u-size-48 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1">
-                  <h3 class="u-align-center u-text u-text-white u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000">Installers of High Security and Energy Efficient Windows, Doors &amp; Living Spaces&nbsp;<br>South Wales
+                <div class="u-container-layout u-valign-bottom-xs u-container-layout-1">
+                  <h3 class="u-align-center u-text u-text-white u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000">
+                    <span style="font-size: 1.25rem;">Installers of High Security and Energy Efficient Windows, Doors &amp; Living Spaces<br>&nbsp;
+                    </span>
+                    <br>South Wales
                   </h3><span class="u-icon u-text-white u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 54.757 54.757" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5803"></use></svg><svg class="u-svg-content" viewBox="0 0 54.757 54.757" x="0px" y="0px" id="svg-5803" style="enable-background:new 0 0 54.757 54.757;"><path d="M40.94,5.617C37.318,1.995,32.502,0,27.38,0c-5.123,0-9.938,1.995-13.56,5.617c-6.703,6.702-7.536,19.312-1.804,26.952
 	L27.38,54.757L42.721,32.6C48.476,24.929,47.643,12.319,40.94,5.617z M27.557,26c-3.859,0-7-3.141-7-7s3.141-7,7-7s7,3.141,7,7
 	S31.416,26,27.557,26z"></path></svg></span>
