--- a/products/composite-doors.html
+++ b/products/composite-doors.html
@@ -160,8 +160,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <h2 class="u-align-left u-product-control u-text u-text-1">Composite Doors</h2><!--/product_title--><!--product_price-->
             <div data-add-zero-cents="true" class="u-product-control u-product-price u-product-price-1">
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
-                <div class="u-old-price" style="text-decoration: line-through !important;">$25.00</div><!--/product_old_price--><!--product_regular_price-->
-                <div class="u-price u-text-palette-2-base" style="font-size: 1.875rem; font-weight: 700;">$20.00</div><!--/product_regular_price-->
+                <div class="u-old-price" style="text-decoration: line-through !important;"></div><!--/product_old_price--><!--product_regular_price-->
+                <div class="u-price u-text-palette-2-base" style="font-size: 1.875rem; font-weight: 700;">£20.00</div><!--/product_regular_price-->
               </div>
             </div><!--/product_price--><!--product_content-->
             <div class="u-align-left u-product-control u-product-desc u-text u-text-2">​Combining modern materials and performance with traditional looks, enhance the character of your home with a composite door.</div><!--/product_content--><!--product_button--><!--options_json--><!--{"clickType":"go-to-page","content":"View"}--><!--/options_json-->
@@ -382,32 +382,20 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
 @media (max-width: 575px) {
   .u-dialog-section-4 .u-dialog-1 {
-    width: 570px;
+    width: 340px;
   }
 
   .u-dialog-section-4 .u-container-layout-1 {
-    padding: 34px 35px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .u-dialog-section-4 .u-text-1 {
-    margin-right: 165px;
-  }
-
-  .u-dialog-section-4 .u-container-layout-3 {
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-  }
-
-  .u-dialog-section-4 .u-container-layout-4 {
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
+    margin-right: 5px;
   }
 
   .u-dialog-section-4 .u-icon-1 {
-    top: 36px;
-    right: 35px;
+    right: 20px;
   }
 }</style>
 </body></html>
