--- a/products/products.html
+++ b/products/products.html
@@ -132,11 +132,11 @@
                 </h4><!--/product_title--><!--product_price-->
                 <div class="u-product-control u-product-price u-product-price-1" data-add-zero-cents="true">
                   <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
-                    <div class="u-old-price">$25.00</div><!--/product_old_price--><!--product_regular_price-->
-                    <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">$20.00</div><!--/product_regular_price-->
+                    <div class="u-old-price"></div><!--/product_old_price--><!--product_regular_price-->
+                    <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">£20.00</div><!--/product_regular_price-->
                   </div>
                 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-                <a href="#" class="u-border-2 u-border-grey-25 u-btn u-btn-rectangle u-button-style u-none u-product-control u-text-body-color u-btn-1 u-add-to-cart-link" data-product-button-click-type="add-to-cart" data-product-id="4" data-product="{&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;composite-doors&quot;,&quot;title&quot;:&quot;Composite Doors&quot;,&quot;description&quot;:&quot;​Combining modern materials and performance with traditional looks, enhance the character of your home with a composite door.&quot;,&quot;price&quot;:&quot;20&quot;,&quot;oldPrice&quot;:&quot;25&quot;,&quot;quantity&quot;:1,&quot;currency&quot;:&quot;USD&quot;,&quot;sku&quot;:&quot;&quot;,&quot;outOfStock&quot;:false,&quot;isFeatured&quot;:false,&quot;categories&quot;:[&quot;1&quot;],&quot;images&quot;:[{&quot;url&quot;:&quot;../images/compositedoors2.png&quot;}],&quot;created&quot;:1705006367022,&quot;updated&quot;:1705840850601,&quot;isDefault&quot;:true,&quot;categoriesData&quot;:[{&quot;link&quot;:&quot;./products/products.html#/1///1&quot;,&quot;title&quot;:&quot;Doors&quot;}]}"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+                <a href="#" class="u-border-2 u-border-grey-25 u-btn u-btn-rectangle u-button-style u-none u-product-control u-text-body-color u-btn-1 u-add-to-cart-link" data-product-button-click-type="add-to-cart" data-product-id="4" data-product="{&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;composite-doors&quot;,&quot;title&quot;:&quot;Composite Doors&quot;,&quot;description&quot;:&quot;​Combining modern materials and performance with traditional looks, enhance the character of your home with a composite door.&quot;,&quot;price&quot;:&quot;20&quot;,&quot;oldPrice&quot;:&quot;&quot;,&quot;quantity&quot;:1,&quot;currency&quot;:&quot;GBP&quot;,&quot;sku&quot;:&quot;&quot;,&quot;outOfStock&quot;:false,&quot;isFeatured&quot;:false,&quot;categories&quot;:[&quot;1&quot;],&quot;images&quot;:[{&quot;url&quot;:&quot;../images/compositedoors2.png&quot;}],&quot;created&quot;:1705006367022,&quot;updated&quot;:1705843422082,&quot;isDefault&quot;:true,&quot;categoriesData&quot;:[{&quot;link&quot;:&quot;./products/products.html#/1///1&quot;,&quot;title&quot;:&quot;Doors&quot;}]}"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
               </div>
             </div><!--/product_item--><!--product_item--><div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-2">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><!--product_image-->
@@ -206,7 +206,7 @@
                     <div class="u-price u-text-palette-2-base" style="font-size: 1.25rem; font-weight: 700;">$17.00</div><!--/product_regular_price-->
                   </div>
                 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-                <a href="#" class="u-border-2 u-border-grey-25 u-btn u-btn-rectangle u-button-style u-none u-product-control u-text-body-color u-btn-6 u-add-to-cart-link" data-product-button-click-type="add-to-cart" data-product-id="1" data-product="{&quot;id&quot;:&quot;1&quot;,&quot;name&quot;:&quot;panel-doors&quot;,&quot;title&quot;:&quot;Panel Doors&quot;,&quot;description&quot;:&quot;A wide range of PVCu panel doors available in a range of styles and colours to suit any property.&quot;,&quot;price&quot;:&quot;17&quot;,&quot;oldPrice&quot;:&quot;20&quot;,&quot;quantity&quot;:1,&quot;currency&quot;:&quot;USD&quot;,&quot;sku&quot;:&quot;&quot;,&quot;outOfStock&quot;:false,&quot;isFeatured&quot;:false,&quot;categories&quot;:[&quot;1&quot;],&quot;images&quot;:[{&quot;url&quot;:&quot;../images/paneldoors.png&quot;}],&quot;created&quot;:1705006367019,&quot;updated&quot;:1705841370461,&quot;isDefault&quot;:true,&quot;categoriesData&quot;:[{&quot;link&quot;:&quot;./products/products.html#/1///1&quot;,&quot;title&quot;:&quot;Doors&quot;}]}"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+                <a href="#" class="u-border-2 u-border-grey-25 u-btn u-btn-rectangle u-button-style u-none u-product-control u-text-body-color u-btn-6 u-add-to-cart-link" data-product-button-click-type="add-to-cart" data-product-id="1" data-product="{&quot;id&quot;:&quot;1&quot;,&quot;name&quot;:&quot;panel-doors&quot;,&quot;title&quot;:&quot;Panel Doors&quot;,&quot;description&quot;:&quot;A wide range of PVCu panel doors available in a range of styles and colours to suit any property.&quot;,&quot;price&quot;:&quot;17&quot;,&quot;oldPrice&quot;:&quot;20&quot;,&quot;quantity&quot;:1,&quot;currency&quot;:&quot;USD&quot;,&quot;sku&quot;:&quot;&quot;,&quot;outOfStock&quot;:false,&quot;isFeatured&quot;:false,&quot;categories&quot;:[&quot;1&quot;],&quot;images&quot;:[{&quot;url&quot;:&quot;../images/paneldoors.png&quot;}],&quot;created&quot;:1705006367019,&quot;updated&quot;:1705844622868,&quot;isDefault&quot;:true,&quot;categoriesData&quot;:[{&quot;link&quot;:&quot;./products/products.html#/1///1&quot;,&quot;title&quot;:&quot;Doors&quot;}]}"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
               </div>
             </div><!--/product_item-->
             
@@ -431,32 +431,20 @@
 
 @media (max-width: 575px) {
   .u-dialog-section-4 .u-dialog-1 {
-    width: 570px;
+    width: 340px;
   }
 
   .u-dialog-section-4 .u-container-layout-1 {
-    padding: 34px 35px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .u-dialog-section-4 .u-text-1 {
-    margin-right: 165px;
-  }
-
-  .u-dialog-section-4 .u-container-layout-3 {
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-  }
-
-  .u-dialog-section-4 .u-container-layout-4 {
-    padding-right: 0;
-    padding-bottom: 0;
-    padding-left: 0;
+    margin-right: 5px;
   }
 
   .u-dialog-section-4 .u-icon-1 {
-    top: 36px;
-    right: 35px;
+    right: 20px;
   }
 }</style>
 </body></html>
