--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-grey-10 u-section-2" id="sec-2285">
+    <section class="u-clearfix u-section-2" id="sec-2285">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-align-center u-text u-text-1">Our Products</h1>
       </div>
