--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
+  <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
         <div class="u-custom-color-1 u-section-row u-section-row-1" id="sec-46aa">
           <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
             <div class="u-social-icons u-spacing-10 u-social-icons-1">
@@ -260,7 +260,7 @@
           <div class="u-clearfix u-sheet u-sheet-1">
             <h2 class="u-text u-text-default u-text-1">Bi-Folding​ Doors</h2>
             <img class="custom-expanded u-image u-image-1" src="images/alibi-fold.png" data-image-width="1056" data-image-height="808">
-            <p class="u-large-text u-text u-text-variant u-text-2"> Combining modern materials and performance with traditional looks, enhance the character of your home with a composite door.</p>
+            <p class="u-large-text u-text u-text-variant u-text-2"> High performance,&nbsp;contemporary styles in a variety of opening sequences to suit your needs.</p>
           </div>
         </div>
         <div class="u-align-center u-carousel-item u-clearfix u-section-3-5" src="">
