--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -35,6 +35,15 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRE50C2H7Q');
+</script>
   <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
         <div class="u-custom-color-1 u-section-row u-section-row-1" id="sec-46aa">
           <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
