--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRE50C2H7Q');
+</script>
   <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
         <div class="u-custom-color-1 u-section-row u-section-row-1" id="sec-46aa">
           <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
