--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
+  <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
         <div class="u-custom-color-2 u-section-row u-section-row-1" id="sec-46aa">
           <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
             <nav data-position="" class="u-menu u-menu-one-level u-offcanvas u-menu-1">
