--- a/Copy-of-EcoShield-Windows.html
+++ b/Copy-of-EcoShield-Windows.html
@@ -473,8 +473,7 @@
                     <span style="font-weight: 700;">January 2024</span>
                     <br>The new windows and doors has transformed my home, inside and out. No more draghts and my neighbours have all commented on the colour of my new door. Very professional job from start to finish.<br>
                     <span style="font-weight: 700;">Mr. Smith - Llwynipia</span>
-                    <br>
-                    <br>
+                    <br>*****
                   </p>
                 </div>
               </div>
@@ -533,23 +532,23 @@
                       </div>
                       <div class="u-carousel-item u-gallery-item u-carousel-item-4" data-image-width="1500" data-image-height="1994">
                         <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/BerwRd-After.jpg.png" alt="After">
+                          <img class="u-back-image u-expanded" src="images/BerwRd-After.png" alt="After">
                         </div>
                         <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-4">
                           <h3 class="u-gallery-heading" style="font-weight: 400;">After</h3>
                         </div>
                         <style data-mode="XL"></style>
                         <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
+                        <style data-mode="MD"></style>
                         <style data-mode="SM"></style>
                         <style data-mode="XS"></style>
                       </div>
                       <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1200" data-image-height="1600">
                         <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20210623-WA0005.jpg" alt="Before">
+                          <img class="u-back-image u-expanded" src="images/IMG-20210903-WA0005.jpg" alt="After">
                         </div>
                         <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-5">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">Before</h3>
+                          <h3 class="u-gallery-heading" style="font-weight: 400;">After</h3>
                         </div>
                         <style data-mode="XL"></style>
                         <style data-mode="LG"></style>
@@ -557,13 +556,11 @@
                         <style data-mode="SM"></style>
                         <style data-mode="XS"></style>
                       </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="1200" data-image-height="1600">
+                      <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="1368" data-image-height="1824">
                         <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20210903-WA0005.jpg" alt="After">
+                          <img class="u-back-image u-expanded" src="images/IMG-20240118-WA0003.jpg">
                         </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-6">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">After</h3>
-                        </div>
+                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-6"></div>
                         <style data-mode="XL"></style>
                         <style data-mode="LG"></style>
                         <style data-mode="MD" data-visited="true"></style>
@@ -581,11 +578,13 @@
                         <style data-mode="SM"></style>
                         <style data-mode="XS"></style>
                       </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-8" data-image-width="1368" data-image-height="1824">
+                      <div class="u-carousel-item u-gallery-item u-carousel-item-8" data-image-width="1200" data-image-height="1600">
                         <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20240118-WA0003.jpg">
+                          <img class="u-back-image u-expanded" src="images/IMG-20210623-WA0005.jpg" alt="Before">
                         </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-8"></div>
+                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-8">
+                          <h3 class="u-gallery-heading" style="font-weight: 400;">Before</h3>
+                        </div>
                         <style data-mode="XL"></style>
                         <style data-mode="LG"></style>
                         <style data-mode="MD" data-visited="true"></style>
